[package]
name = "fabric_client"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
futures = "0.3"

serde = { version = "^1.0.117", features = ["derive"] }
serde_json = "1.0.60"

tokio-tungstenite = "0.12.0"

log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "0.3", features = ["time", "rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = "0.3"
wasm_util = { path = "../wasm_util" }
