[package]
name = "livecore_protocol"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

[features]
jsonschema = ["schemars"]

[[bin]]
name = "gen_schema"
path = "src/gen_schema.rs"
required-features = ["jsonschema"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.117", features = ["derive"] }
serde_json = "1.0.60"
bincode = "1.3.1"

uuid = { version = "^0.8.1", features = ["serde"] }

schemars = { version = "0.8", optional = true }
