[package]
name = "server_test"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
env_logger = "0.8"

glib = "0.10"
gstreamer = "0.16"
gstreamer-app = "0.16"

tokio = { version = "0.3.5", features = ["full"] }
tokio-tungstenite = "0.12"
futures = "0.3"

livecore_protocol = { path = "../protocol" }
livecore_mp4 = { path = "../mp4" }

byteorder = "1.3"

once_cell = "1.5"
